# monorepo-vscode-example

./: README.md  monorepo-example.code-workspace
libs/lib1/: pyproject.toml
libs/lib1/lib1/: decider.py
libs/lib1/tests/: test_decider.py
services/webservice_1/: pyproject.toml
services/webservice_1/src/: main.py
services/webservice_1/tests/: test_main.py
