[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sebastian Rodriguez Colina <srcolinas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
lib1 = {path = "../../libs/lib1", develop = true}


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.1"
pytest = "^8.3.4"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
